Compiler Bouw/compiler/test/basic/stephen/fail/void_variable.cvc
#include "civic.h"

export int main() {
    void a;
    return 0;
}
